Deployment/Manifests/Auth/auth-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: janus-kong
  namespace: kong
spec:
  type: ExternalName
  externalName: janus-service.auth.svc.cluster.local
  ports:
    - port: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: kong
  annotations:
    cert-manager.io/cluster-issuer: kong-issuer
spec:
  ingressClassName: kong
  tls:
  - secretName: api-patrickbuck-net-tls
    hosts:
    - api.patrickbuck.net
  rules:
  - host: "api.patrickbuck.net"
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: janus-kong
            port:
              number: 80
